@@ -16,6 +16,8 @@
  ******************************************************************************/
 package mobac.mapsources.mappacks.region_europe_east;
 
+import java.net.HttpURLConnection;
+
 import mobac.mapsources.AbstractHttpMapSource;
 import mobac.program.interfaces.HttpMapSource;
 import mobac.program.model.TileImageType;
@@ -34,6 +36,12 @@ public class Cykloatlas extends AbstractHttpMapSource {
 		if (zoom >= 13)
 			z += "c";
 		return "http://services.tmapserver.cz/tiles/gm/shc/" + z + "/" + tilex + "/" + tiley + ".png";
+	}
+
+	@Override
+	protected void prepareTileUrlConnection(HttpURLConnection conn) {
+		super.prepareTileUrlConnection(conn);
+		conn.addRequestProperty("Referer", "http://www.cykloserver.cz/cykloatlas/");
 	}
 
 	@Override
